update some config

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,9 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.disableAutomaticComponentCreation=true
+ossrhUsername="postliu"
+ossrhPassword="Lx123456789."
+
+signing.keyId="2BC16EF9"
+signing.password="123456789"
+signing.secretKeyRingFile="~/.gnupg/secret.gpg"
